fix: bug in info page. overflow of movie details in some mobile screen

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -251,6 +251,9 @@
   .h-\[5vh\] {
     height: 5vh;
   }
+  .h-\[10vh\] {
+    height: 10vh;
+  }
   .h-\[13vh\] {
     height: 13vh;
   }
@@ -275,11 +278,17 @@
   .h-\[100vh\] {
     height: 100vh;
   }
+  .h-\[110vh\] {
+    height: 110vh;
+  }
   .h-\[145vh\] {
     height: 145vh;
   }
   .h-\[150vh\] {
     height: 150vh;
+  }
+  .h-\[160vh\] {
+    height: 160vh;
   }
   .h-\[vh\] {
     height: vh;
